# BluetoothKeySyncGUI

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE.md  README.md  SYNC_IMPLEMENTATION.md  bindings.ts  build-elevated-scrapper.sh  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: build.yml
scripts/: build-flatpak.sh  build-snap.sh  repack-appimage.sh
src/: .editorconfig  app.css  app.html
src-tauri/: .editorconfig  Cargo.toml  tauri.conf.json
src-tauri/app_macros/: Cargo.toml
src-tauri/app_macros/src/: lib.rs
src-tauri/bluetooth_model/: Cargo.toml
src-tauri/bluetooth_model/src/: batch.rs  bluetooth_data.rs  lib.rs  worker_protocol.rs
src-tauri/elevated_scrapper_standalone/: Cargo.toml
src-tauri/elevated_scrapper_standalone/docs/: ArchBluetoothWiki.md  Notes.md
src-tauri/elevated_scrapper_standalone/src/: device_info.rs  info_model.rs  main.rs  scan_filesystem.rs
src-tauri/icons/: icon.icns
src-tauri/src/: elevated.rs  elevated_worker.rs  lib.rs  main.rs
src-tauri/src/api/: linux_api.rs  message.rs  mod.rs  sync_api.rs  update_api.rs  windows_api.rs
src-tauri/src/bluetooth/: bluetooth_data.rs  hive_parse.rs  mod.rs
src-tauri/src/elevated_scrapper/: main.rs
src-tauri/src/sync/: linux_writer.rs  mod.rs  windows_writer.rs
src/lib/: smoothScroll.ts  state.ts
src/lib/api/: index.ts
src/lib/components/: BluetoothDevicesTree.svelte  CodeBlock.svelte  SetupWizard.svelte  UpdateBanner.svelte
src/lib/components/bluetooth/: Controller.svelte  Device.svelte  DevicesTree.svelte
src/lib/components/bluetooth/syncing/: CanvasWrapper.svelte  ChangeRequest.svelte  ControllerGroupNode.svelte  DeviceCanvas.svelte  DeviceDetailsDialog.svelte  DeviceMatchList.svelte  DeviceNode.svelte  DevicePairRow.svelte  DeviceSyncLayout.svelte  DragOverlay.svelte  KeyIndicators.svelte  PairSideMiniCard.svelte  SyncActionBar.svelte  UnmatchedDevice.svelte  UnpairedDeviceCard.svelte  matching.ts  os-theme.ts  utils.ts
src/lib/components/bluetooth/syncing/nodeCanvas/: ControllerGroupNode.svelte  DeviceCanvas.svelte  DeviceNode.svelte  FloatingEdge.svelte  NodeID.ts
src/lib/components/ui/progress/: progress.svelte
src/routes/: +layout.svelte  +page.svelte  ConfigLinux.svelte  ConfigWindows.svelte
src/routes/sync/: +page.svelte  Sync.svelte
