[package]
name = "bluetooth-key-sync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "bluetooth-key-sync"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bluetooth_key_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

taurpc = "0.5.1"

app_macros = { path = "app_macros" }
bluetooth_model = { path = "bluetooth_model" }


specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono", "mac_address"] }
specta-typescript = "0.0.9"
tokio = { version = "1", features = ["full"] }
chrono = {version = "0.4.41", features = ["serde"] }
mac_address = {version = "1.1.8",  features = ["serde"] }
nt_hive2 = "4.2.3"
tauri-plugin-svelte = "2"

elevated-command = "1.1"
tauri-plugin-shell = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[workspace]
members = ["elevated_scrapper_standalone"]
