[package]
name = "bluetooth_model"
version = "0.1.0"
edition = "2021"

[dependencies]
app_macros = { path = "../app_macros" }
chrono = {version = "0.4.41", features = ["serde"] }
mac_address = {version = "1.1.8",  features = ["serde"] }

specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono", "mac_address"] }
specta-typescript = "0.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
