[package]
name = "elevated_scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bluetooth_model = { path = "../bluetooth_model" }
sudo = "0.6.0"
chrono = {version = "0.4.41", features = ["serde"] }
mac_address = {version = "1.1.8",  features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
toml = "0.8.23"
toml_edit = "0.22.27"
